networkpolicy/networkpolicy__basic_kafka_setup__cert-manager__exception__app__ingress__ports__443-9402-10250__nr10__lines22.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager--exception--app--ingress--ports--443-9402-10250--nr10
  namespace: cert-manager
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prometheus
    ports:
    - protocol: TCP
      port: 10250
    - protocol: TCP
      port: 9402
    - protocol: TCP
      port: 443
